--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@angular/platform-browser": "^12.2.5",
     "@angular/platform-browser-dynamic": "^12.2.5",
     "@angular/router": "^12.2.5",
+    "@ngxs/devtools-plugin": "^3.7.3",
+    "@ngxs/logger-plugin": "^3.7.3",
+    "@ngxs/store": "^3.7.3",
     "rxjs": "^7.3.0",
     "tslib": "^2.3.1",
     "zone.js": "^0.11.4"
